# synse-server

./: .chartreleaser.yml  .dockerignore  .dockerignore.default  .dockerignore.slim  .flake8  .gitignore  .jenkins  .pep8  .pre-commit-config.yaml  .pylintrc  Dockerfile  Dockerfile.macos  Dockerfile.rpi  Dockerfile.southbound-test  Dockerfile.southbound-test-rpi  Dockerfile.x64  Jenkinsfile  LICENSE  MANIFEST.in  Makefile  NOTICE  NOTICE.txt  README.md  bmc_config.json  bmc_config_sample.json  cfg1.yaml  cfg2.yaml  compose.yml  configure_nginx_config.sh  conftest.py  docker-compose.yml  emperor.ini  graphql_uwsgi.ini  logging_bootstrap.json  logging_core.json  logging_emulator.json  logging_opendcre.json  nginx-conf.sh  opendcre.yml  opendcre_config.json  (+31 more)
.circleci/: config.yml
.github/: CODEOWNERS  ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md  dependabot.yml
background/: README.md  constants.py  conversions.py  dkmodbus.py  file_io.py  hub.py  io.py  main.py  utils.py
certs/: README.txt
cloud-builder/: cloudbuild.yaml
compose/: dev-i2c.yml  dev-ipmi.yml  dev-plc.yml  dev-redfish.yml  dev-rs485.yml  dev-snmp.yml  dev.yml  emulator.yml  end-to-end_test.yml  example-config.yml  graphql-release.yml  graphql-test.yml  integration_test.yml  lint.circleci.yml  lint.yml  release.yml  run-emulator.yml  synse.yml  test.yml  test_end_to_end.yml  test_integration.yml  test_unit.yml  unit.circleci.yml  unit_test.yml
config/: README.md  config.yml
configs/: i2c_config.json  i2c_ipmi_config.json  logging_bootstrap_debug.json  logging_emulator_debug.json  nginx.logrotate  (+10 more)
(+1410 files in other folders)
