[tool.poetry]
name = "synse-server"
version = "3.4.1"
description = "An API to monitor and control physical and virtual devices."
authors = ["Erick Daniszewski <erick@vapor.io>"]
license = "GNU General Public License v3.0"

[tool.poetry.scripts]
synse_server = "synse_server.__main__:main"

[tool.poetry.dependencies]
python = "^3.7"
aiocache = "^0.11.1"
bison = "^0.1.3"
grpcio = "^1.40.0"
kubernetes = "^17.17.0"
PyYAML = "^5.4.1"
sanic = "^21.6.2"
prometheus-client = "^0.11.0"
shortuuid = "^1.0.1"
structlog = "^21.1.0"
websockets = "^9.1"
synse-grpc = "3.1.0"

[tool.poetry.dev-dependencies]
aiohttp = "^3.7.4"
asynctest = "^0.13.0"
mock = "^4.0.3"
pytest = "^6.2.5"
pytest-asyncio = "^0.15.1"
pytest-cov = "^2.12.1"
pytest-mock = "^3.6.1"
requests = "^2.26.0"
sanic-testing = "^0.6.0"
pre-commit = "^2.15.0"
flake8-isort = "^4.0.0"

[tool.isort]
default_section = "THIRDPARTY"
known_first_party = "synse_server,tests"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
